fix(Warranty): VAN-22889 menu warranty dropdown high contrast fix

--- a/vtr-ui/src/app/components/menu-main/menu-main.component.scss
+++ b/vtr-ui/src/app/components/menu-main/menu-main.component.scss
@@ -721,10 +721,6 @@
 			top: 0.3rem;
 		}
 	}
-
-	.warranty-icon {
-		padding-left: 1rem;
-	}
 }
 
 .unread-count-tag {
